web/book/tests/snapshots/snapshot__language-features__distinct__selecting-from-each-group__1.snap
---
source: web/book/tests/snapshot.rs
expression: "from employees\ngroup [first_name, last_name] (take 1)\n"
---
WITH table_1 AS (
  SELECT
    *,
    ROW_NUMBER() OVER (PARTITION BY first_name, last_name) AS _expr_0
  FROM
    employees
)
SELECT
  *
FROM
  table_1 AS table_0
WHERE
  _expr_0 <= 1

